Add video handler module and fix errors
- Add upload/stream function. Also add movie_path in movie table (non-null if using movie).  Currently untested.
- Fix migration filename error
